excalidraw-nginx/config/namespace.yaml
## create namespace excalidraw
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
