excalidraw-nginx/config/ingress-local.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx" # comment this out, if you want to use traefik instead
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: excalidraw
  namespace: excalidraw
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: excalidraw
          servicePort: 80
